--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>The Mike0303 Experience</h1>
+        <h1>The VC Experience</h1>
         <nav>
             <p><a href="#mission">Mission Statement</a> </p>
             <p><a href="#Portfolio">Portfolio</a> </p>
@@ -85,4 +85,5 @@
 </body>
 
 </html>
+
 
